--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -18,7 +18,7 @@
 
     <!--Background and top header-->
     <div class="fade" id="bg1">
-        <h1 class="fade" id="head1">Software<br>Engineer</h1>
+        <h1 class="fade" id="head1">Software<br>Engineering</h1>
     </div>
 
     <!--Side Navigation-->
@@ -30,7 +30,8 @@
     <!--About Course-->
     <div id="about_course">
         <h1 class="transition" id="course_description">What is Software Engineering?</h1>
-        <p id="text_descript">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio iure, ullam provident nam at qui, enim deserunt atque deleniti pariatur facilis asperiores excepturi exercitationem voluptatem amet nesciunt necessitatibus! Animi, magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis quaerat quibusdam dignissimos inventore, aperiam iure, non quis culpa placeat perspiciatis nesciunt nobis itaque velit omnis doloremque vel voluptatem, deleniti ab!
+        <p id="text_descript">L
+            orem ipsum dolor sit amet consectetur adipisicing elit. Optio iure, ullam provident nam at qui, enim deserunt atque deleniti pariatur facilis asperiores excepturi exercitationem voluptatem amet nesciunt necessitatibus! Animi, magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis quaerat quibusdam dignissimos inventore, aperiam iure, non quis culpa placeat perspiciatis nesciunt nobis itaque velit omnis doloremque vel voluptatem, deleniti ab!
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam rem placeat architecto veritatis praesentium explicabo fuga est deleniti ad quas officiis quos, nobis ut vel ullam necessitatibus unde ab aliquid.
         </p>
     </div>
@@ -44,7 +45,8 @@
                     - Software Tester<br>
                     - System Analyst<br>
                     - Software Architect<br>
-                    - Project manager Assistant.<br> </p>
+                    - Project manager Assistant.
+                </p>
     </div>
 
     <!--Specific subjects in SE branch-->
@@ -172,7 +174,7 @@
     </div>
 
     <!--//////////////////////////////////////////////////////////////////////////////-->
-    <table id="branch_subjects_table" width="90%">
+    <table id="branch_subjects_table" width="90%" align="center">
         <tr>
             <th>YEAR 2/2</th>
             <th>YEAR 3/1</th>
@@ -186,7 +188,7 @@
                 Software Engineering
             </td>
             <td>
-                6016323
+                6016323<br>
                 Mobile Device Programming
             </td>
             <td>
@@ -235,9 +237,24 @@
     <div id="branch_eligible">
         <h1>Who is eligible for this branch?</h1>
         <p>
-            1. Have programming knowledge.
-            2. Have good logic.
+            1. Have programming knowledge.<br>
+            2. Have good logic.<br>
             3. Have good mathematic knowledge.
+        </p>
+    </div>
+
+    <!--What you need to do/to have if you are interested in this branch-->
+    <div id="branch_interested">
+        <h1>What I need to do/to have if I am interested in this branch and do not have strong experience?</h1>
+        <p>
+            It would be easier to enter this branch if you have some experience in programming.
+        </p>
+        <p>
+            We also have pre-programming course for PSIT subject which you will learn about Python language. 
+            This would help you make decision and be more confident in yourselves.
+        </p>
+        <p>
+            Here at IT faculty. We have 3 programming 
         </p>
     </div>
 
