--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -23,10 +23,17 @@
 
     <!--Side Navigation-->
     <div id="Sidenav" class="fade">
-        <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl">IT @KMITL<img src="it_kmitl.png" width="50px" height="50px" align='right'></a>
-        <a href="#" id="content_table"> <img src="dashboard.svg" align='right' width="50px" height="50px"></a>
+        <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl">IT @KMITL<img src="it_kmitl.png"
+                                                                                         width="50px" height="50px" align='right'></a>
     </div>
-
+    <!--  TEST   -->
+    <div id="Sidenav2" class="fade_dropdown">
+        <a href="#" id="content_table"><img src="dashboard.svg" align='right' width="50px" height="50px">MENU</a>
+        <div class="dropdown-content">
+            <p>Hello World!</p>
+        </div>
+    </div>
+    <!---------------------------------------------->
     <!--About Course-->
     <div id="about_course">
         <h1 class="transition" id="course_description">What is Software Engineering?</h1>
