--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -39,7 +39,7 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: #111;
+            background-color: antiquewhite;
             overflow-x: hidden;
             transition: 0.5s;
             padding-top: 60px;
@@ -49,13 +49,13 @@
             padding: 8px 8px 8px 32px;
             text-decoration: none;
             font-size: 25px;
-            color: #818181;
+            color: black;
             display: block;
             transition: 0.3s;
         }
 
         .sidenav a:hover {
-            color: #f1f1f1;
+            color: dodgerblue;
         }
 
         .sidenav .closebtn {
@@ -81,8 +81,8 @@
         <a href="#branch_interested">Interested</a>
         <a href="#different_branch">Different</a>
     </div>
-    <div  id="sidenav2" onclick="openNav()">
-        <a id="content_table"><img src="dashboard.svg" align='right' width="50px" height="50px"></a>
+    <div id="sidenav2" onclick="openNav()" hover>
+        <a id="content_table"><img id="img_nav2" src="dashboard.svg" align='right' width="50px" height="50px"></a>
 
     </div>
     <script>
