--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -23,8 +23,7 @@
 
     <!--Side Navigation-->
     <div id="Sidenav" class="fade">
-        <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl">IT @KMITL<img src="it_kmitl.png"
-                                                                                         width="50px" height="50px" align='right'></a>
+        <a href="http://www.it.kmitl.ac.th/" target="_blank" id="it_kmitl">IT @KMITL<img src="it_kmitl.png" width="50px" height="50px" align='right'></a>
     </div>
     <!--  TEST   -->
     <div id="Sidenav2" class="fade_dropdown">
@@ -34,14 +33,19 @@
         </div>
     </div>
     <!---------------------------------------------->
+
     <!--About Course-->
     <div id="about_course">
         <h1 class="transition" id="course_description">What is Software Engineering?</h1>
-        <p id="text_descript">L
-            orem ipsum dolor sit amet consectetur adipisicing elit. Optio iure, ullam provident nam at qui, enim deserunt atque deleniti pariatur facilis asperiores excepturi exercitationem voluptatem amet nesciunt necessitatibus! Animi, magni. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis quaerat quibusdam dignissimos inventore, aperiam iure, non quis culpa placeat perspiciatis nesciunt nobis itaque velit omnis doloremque vel voluptatem, deleniti ab!
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam rem placeat architecto veritatis praesentium explicabo fuga est deleniti ad quas officiis quos, nobis ut vel ullam necessitatibus unde ab aliquid.
+        <p id="text_descript">
+                Software engineering is the branch that focusing on programming, developing software systems in the service of mankind. 
+                This course covers the fundamentals of software engineering, including understanding system 
+                requirements, effective methods of design, coding, and testing.
         </p>
     </div>
+
+    <!--Parallax-->
+    <div class="parallax"></div>
 
     <!--Carrer after graduate-->
     <div id="career_ex">
