--- a/SE_Project/SE_Poject.html
+++ b/SE_Project/SE_Poject.html
@@ -27,10 +27,6 @@
     </div>
     <!--  SIDE NAV   -->
     <style>
-        body {
-            font-family: "Lato", sans-serif;
-        }
-
         .sidenav {
             height: 100%;
             width: 0;
@@ -97,7 +93,7 @@
 
     <!--About Course-->
     <div id="about_course">
-        <h1 class="transition" id="course_description">What is Software Engineering?</h1>
+        <h1 class="transition text_font" id="course_description">What is Software Engineering?</h1>
         <p id="text_descript">
                 Software engineering is the branch that focusing on programming, developing software systems in the service of mankind. 
                 This course covers the fundamentals of software engineering, including understanding system 
@@ -110,7 +106,7 @@
 
     <!--Carrer after graduate-->
     <div id="career_ex">
-        <h1 class="transition" id="career_ex_head">Example of career after graduated</h1>
+        <h1 class="transition text_font" id="career_ex_head">Example of career after graduated</h1>
                 <p id="career_ex_head_text">
                     - Programmer<br>
                     - Web Developer<br>
@@ -121,22 +117,14 @@
                 </p>
     </div>
 
+    <!--Parallax-->
+    <div class="parallax1"></div>
+
     <!--Specific subjects in SE branch-->
     <div id="branch_subjects">
-        <h1 class="transition" id="branch_subjects_ex">Branch Subject</h1>
-                <ol>
-                    <li>SOFTWARE ENGINEERING</li>
-                    <li>WEB PROGRAMMING</li>
-                    <li>MOBILE DEVICE PROGRAMMING</li>
-                    <li>REQUIREMENT ENGINEERING</li>
-                    <li>SERVICE-ORIENTED PROGRAMMING</li>
-                    <li>SOFTWARE VERIFICATION AND VALIDATION</li>
-                    <li>CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</li>
-                    <li>SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</li>
-                    <li>PROJECT IN SOFTWARE ENGINEERING 1</li>
-                    <li>PROJECT IN SOFTWARE ENGINEERING 2</li>
-                </ol>
-
+        <h1 class="transition text_font" id="branch_subjects_ex">Branch Subjects</h1>
+    </div>
+        <div id="branch_sub">
                 <p>
                     <b><br>SOFTWARE ENGINEERING<br></b>
                     Subject code: 06016321<br>
@@ -253,7 +241,8 @@
                     a faculty member to be able to present a complete result of the proposed topic and study as continued from project I.</span>
                 </p>
                 <button onclick="readFunction9()" id="readMore9">Read more</button>
-    </div>
+        </div>
+
 
     <!--///////////////////////// TABLE  PROJECT /////////////////////////////////-->
     <p align="center" id="head_table_project"><b>Without Cooperative Work</b></p>
@@ -374,9 +363,13 @@
         </tr>
     </table>
 
+    <div class="parallax2"></div>
+
     <!--Who is eligible for this branch?-->
-    <div class="transition" id="branch_eligible">
+    <div class="transition" id="branch_eligible"  style="background-color:moccasin;">
         <h1>Who is eligible for this branch?</h1>
+    </div>
+    <div style="padding-left:750px; font-size: 25px;">
         <p>
             1. Have programming knowledge.<br>
             2. Have good logic.<br>
@@ -385,8 +378,10 @@
     </div>
 
     <!--What you need to do/to have if you are interested in this branch-->
-    <div class="transition" id="branch_interested">
+    <div class="transition" id="branch_interested" style="background-color:moccasin;">
         <h1>What I need to do/to have if I am interested in this branch and do not have strong experience?</h1>
+    </div>
+        <div style="padding-left:100px; font-size: 25px;">
         <p>
             It would be easier to enter this branch if you have some experience in programming.
         </p>
@@ -402,8 +397,12 @@
     </div>
 
     <!--How is Software Engineering differ from Multimedia and Network branch?-->
-    <div class="transition" id="different_branch">
+    <div class="transition" id="different_branch" style="background-color:moccasin;">
+
+    
         <h1>How Software Engineering differ from Multimedia and Game Development and Network and System Technology branch?</h1>
+    </div>
+        <div align="center" style="font-size: 25px;">
         <p>
             For Multimedia and Game Development, students in this branch will learn about front-end development and the use of creativity.
             But for Software Engineering, we are focusing on back-end developing and deep programming.
@@ -413,7 +412,7 @@
 
     <!--End of the line-->
     <div id="end_line">
-        <h1>Finish!</h1>
+        <h1>Map</h1>
     </div>
 
     <!--JavaScript-->
